--- a/resources/index.html
+++ b/resources/index.html
@@ -3,26 +3,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <meta
       name="viewport"
       content="maximum-scale=10, minimum-scale=1, width=device-width"
     />
 
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+      "
+    />
+
     <link rel="apple-touch-icon" href="favicon.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
-
     <link rel="manifest" href="manifest.json" />
 
     <title>fing</title>
   </head>
 
   <body>
-    <script type="module">
-      import "./index.mjs";
-
-      if ("serviceWorker" in navigator) {
-        await navigator.serviceWorker.register("./serviceWorker.mjs");
-      }
-    </script>
+    <script type="module" src="index.mjs"></script>
   </body>
 </html>
