--- a/resources/index.html
+++ b/resources/index.html
@@ -16,11 +16,17 @@
       "
     />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://fing.hata6502.com/favicon.png" />
+    <meta property="og:title" content="fing - A quick handwritten note" />
+    <meta property="og:url" content="https://fing.hata6502.com/" />
+    <meta name="twitter:card" content="summary" />
+
     <link rel="apple-touch-icon" href="favicon.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="manifest" href="manifest.json" />
 
-    <title>fing</title>
+    <title>fing - A quick handwritten note</title>
   </head>
 
   <body>
