--- a/resources/index.html
+++ b/resources/index.html
@@ -25,6 +25,7 @@
     <link rel="apple-touch-icon" href="favicon.png" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="manifest" href="manifest.json" />
+    <link href="index.css" rel="stylesheet" />
 
     <title>fing - A quick handwritten note</title>
   </head>
