--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta
       name="viewport"
-      content="maximum-scale=10, minimum-scale=1, width=device-width"
+      content="maximum-scale=1, minimum-scale=0.1, initial-scale=0.1, width=device-width"
     />
 
     <meta
